force-app/main/default/objects/FINS_Equity_Asset__c/fields/FINS_Private_Equity_Associated_Deal__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Associated_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Equity Assets</relationshipLabel>
    <relationshipName>Equity_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>