force-app/main/default/objects/FINS_Equity_Asset__c/fields/FINS_Private_Equity_Expected_Return__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Expected_Return__c</fullName>
    <label>Expected Return</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>