force-app/main/default/objects/FINS_Equity_Asset__c/fields/FINS_Private_Equity_Phase__c.field-meta.xml
<CustomField>
    <fullName>FINS_Private_Equity_Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Targeted</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Listed for Sale</fullName>
            </value>
            <value>
                <fullName>Buyers Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>